# ev3_robotica

./: README.md  musb.sh  odroid_setup.sh
merakm/: CMakeLists.txt  package.xml
merakm_bringup/: CMakeLists.txt  package.xml
merakm_bringup/arduino/left_arduino/: left_arduino.h  left_arduino.ino
merakm_bringup/arduino/right_arduino/: right_arduino.h  right_arduino.ino
merakm_bringup/launch/: merakm_core.launch  merakm_mjbots.launch
merakm_bringup/src/: arduino_node.py  robot_cmd.cpp  robot_odom.cpp
merakm_description/: CMakeLists.txt  package.xml
merakm_description/config/: merakm_rviz.rviz
merakm_description/launch/: merakm_rviz.launch  merakm_spawn.launch
merakm_description/src/: tf_merakm.py
merakm_description/urdf/: merakm.xacro  merakm_gazebo.xacro  merakm_macros.xacro  merakm_params.xacro
merakm_gazebo/: CMakeLists.txt  package.xml
merakm_gazebo/launch/: merakm_empty_world.launch  merakm_tb3_stage_4.launch  merakm_tb3_world.launch
merakm_navigation/: CMakeLists.txt  package.xml
merakm_navigation/launch/: merakm_navigation.launch  move_base.launch  move_base_astar_dwa.launch  move_base_astar_simple.launch  move_base_rrt_dwa.launch  move_base_simple.launch  move_base_simple_dwa.launch
merakm_navigation/maps/: house_map.pgm
merakm_navigation/rviz/: merakm_navigation.rviz
merakm_slam/: CMakeLists.txt  package.xml
merakm_slam/config/: merakm_slam.rviz
merakm_slam/launch/: merakm_gmapping.launch
